<package>
  <name>cute_servo_controllers</name>
  <version>0.0.0</version>
  <description>
	The package for cute servo controllers
  </description>
  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>

  <license>BSD</license>

  <author>Antons Rebguns</author>
  <author>Cody Jorgensen</author>
  <author>Cara Slutter</author>
  <author>Cong Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>dynamixel_motor</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamixel_driver</run_depend>
  
  <export>

  </export>
</package>
